@@ -60,6 +60,7 @@ extern int NTViewRefresh;
 extern uint8 gNoBGFillColor;
 extern bool rightClickEnabled;
 extern int CurrentState;
+extern bool pauseWhileActive; //adelikat: Cheats dialog
 
 //window positions and sizes:
 extern int ChtPosX,ChtPosY;
@@ -300,6 +301,7 @@ static CFGSTRUCT fceuconfig[] = {
 
 	AC(backupSavestates),
 	AC(compressSavestates),
+	AC(pauseWhileActive),
 
 	ENDCFGSTRUCT
 };
